--- a/styles/base.css
+++ b/styles/base.css
@@ -1,131 +1,204 @@
-body {
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Pixelify+Sans:wght@400..700&display=swap');
 
+body {
+    font-family: "Noto Sans", sans-serif;
+    background: #252323;
+    color: white;
+    border: 10px solid black;
+    border-radius: 5px;
 }
 
 header {
-
+    border-bottom: 5px solid #70798C;
+    background: white;
 }
 
 nav {
-
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    padding: 2rem;
 }
 
 nav a {
-
+    text-align: center;
+    font-size: larger;
+    color: black;
+    text-decoration: none;
+    border-right: 3px solid black;
 }
 
-#active {
+nav a:last-child {
+    border: none;
+}
 
+#active::before, #active::after {
+    content: " • "
 }
 
 main {
-
+    text-align: center;
+    min-height: 700px;
 }
 
-#stats {
-
+main h1 {
+    margin-top: 100px;
+    color: #E2C044;
 }
 
-#stats h1 {
+#stats, #active-quests {
+    text-align: center;
+}
 
+.stat-box, .quest-box, .item-box {
+    margin: auto;
+    padding: 10px;
+    min-width: 350px;
+    border-radius: 10px;
+    background: black;
 }
 
 .stat-box {
-
+    max-width: 40%;
+    border: 1px solid #E2C044;
 }
 
-.stat-box h2 {
-
+.quest-box, .item-box {
+    max-width: 20%;
+    border: 1px solid #BF0603;
 }
 
-.stat-box h3 {
-
-}
-
-#active-quests {
-
-}
-
-#active-quests h1 {
-
+#active-quests, #quest-board, .items {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    margin: 10px;
 }
 
 .quest-box {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    margin: 20px auto;
+}
 
+.quest-box:nth-child(even), .item-box:nth-child(even) {
+    border: 1px solid #0CCA4A;
 }
 
 .quest-box h2 {
+    text-align: center;
+    grid-column: 1/3;
+}
 
+.rewards-box, .description-box {
+    border: 1px solid #70798C;
+    margin: 5px;
+    margin-bottom: 15px;
+    padding: 3px;
 }
 
 .rewards-box {
-
-}
-
-.rewards-box h4 {
-
+    grid-column: 1/2;
 }
 
 .description-box {
-
+    grid-column: 2/3;
+    text-align: left;
 }
 
-.description-box h4 {
+.rewards-box h4, .description-box h4 {
+    text-align: center;
+    font-size: larger;
+}
 
+.big-button, .small-button, .creator-button {
+    grid-column: 1/3;
+    margin: 2px auto;
+    color: black;
+    border: 2px solid white;
+    cursor: pointer;
+    border-radius: 5px;
+    min-height: 30px;
+}
+
+.big-button:hover, .small-button:hover, .creator-button:hover {
+    border: 2px solid gray;
 }
 
 .big-button {
-
+    width: 75%;
+    background: #0CCA4A;
 }
 
 .small-button {
-
+    width: 50%;
+    background: #BF0603;
 }
 
 .creator-button {
-
-}
-
-#quest-board {
-
-}
-
-#quest-board h1 {
-
-}
-
-.items {
-
+    width: 25%;
+    padding: 5px;
+    background: #E2C044;
+    color: black;
+    margin: 35px;
 }
 
 .item-box {
-
-}
-
-.item-box h2 {
-
-}
-
-.item-box h4 {
-
+    margin: 20px auto;
 }
 
 .creator {
-
+    padding: 50px;
+    border: 3px solid #E2C044;
+    min-height: 600px;
+    max-width: 1000px;
+    margin: 50px auto;
+    background: black;
+    border-radius: 5px;
 }
 
-.info {
-
+.info, .rewards {
+    padding: 20px;
+    border: none;
 }
 
 .info label {
+    display: block;
+    margin: 20px;
+}
 
+.info input, .info textarea, .rewards input {
+    background: black;
+    color: white;
+    border: 2px solid #70798C;
+    border-radius: 5px;
+}
+
+.info input {
+    text-align: center;
+    min-height: 25px;
+}
+
+.info textarea {
+    min-width: 150px;
+    min-height: 100px;
+    max-width: 300px;
+    max-height: 150px;
+}
+
+.small-box {
+    max-width: 50px;
 }
 
 .rewards {
-
+    margin-top: none;
+    border: 1px solid #70798C;
+    padding: 20px;
+    margin: 20px auto;
+    max-width: 30%;
+    border-radius: 10px;
 }
 
 .rewards label {
-    
+    display: block;
+    margin: 10px;
 }
