--- a/styles/base.css
+++ b/styles/base.css
@@ -62,6 +62,14 @@ main h1 {
     border: 1px solid #E2C044;
 }
 
+.stat-box h2 input {
+    background: black;
+    border: none;
+    border-radius: 5px;
+    text-align: center;
+    color: white;
+}
+
 .quest-box, .item-box {
     max-width: 20%;
     border: 1px solid #BF0603;
@@ -110,7 +118,7 @@ main h1 {
     font-size: larger;
 }
 
-.big-button, .small-button, .creator-button {
+.big-button, .small-button, .creator-button, #name-button {
     grid-column: 1/3;
     margin: 2px auto;
     color: black;
@@ -138,8 +146,14 @@ main h1 {
     width: 25%;
     padding: 5px;
     background: #E2C044;
-    color: black;
     margin: 35px;
+}
+
+#name-button {
+    width: 25%;
+    padding: 5px;
+    border: 2px solid #E2C044;
+    font-size: small;
 }
 
 .item-box {
